objects/vlocity_cmt__FulfilmentRequestLine__c.object
<CustomObject>
    <description>A line item in the back end order. Refers to Specification (Product2) and, optionally, Asset</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>The action ordered for this line item with values of Add, Change, Existing or Disconnect. Existing means no change is requested. Add is a request to add the item, Change is a request to change it. Disconnect is a request to remove it.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                    <default>true</default>
                    <label>Add</label>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the line item.</description>
        <inlineHelpText>BillingAccountId</inlineHelpText>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fulfilment Request</description>
        <inlineHelpText>Fulfilment Request</inlineHelpText>
        <label>Fulfilment Request Id</label>
        <referenceTo>vlocity_cmt__FulfilmentRequest__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>InventoryItemId</description>
        <inlineHelpText>InventoryItemId</inlineHelpText>
        <label>InventoryItemId</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Fulfilment Request Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>LineNumber</description>
        <inlineHelpText>LineNumber</inlineHelpText>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <inlineHelpText>Product2</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fulfillment Request Lines</relationshipLabel>
        <relationshipName>FulfillmentRequestLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <inlineHelpText>ServiceAccountId</inlineHelpText>
        <label>ServiceAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillment Request Lines (ServiceAccountId)</relationshipLabel>
        <relationshipName>FulfillmentRequestLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action ordered for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <inlineHelpText>Sub-Action</inlineHelpText>
        <label>Sub-Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move-Add</fullName>
                </value>
                <value>
                    <fullName>Move-Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfilment Request Line</label>
    <nameField>
        <displayFormat>FRL{0000000}</displayFormat>
        <label>Fulfilment Request Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Request Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>